# design_pattern

./: LICENSE  README.md  build.sh
include/: strategy.h
src/: CMakeLists.txt  strategy.cc  test.cc
